Carousel scrollbar fixed

--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,10 @@ body {
 }
 
 .carousel{
-    overflow: scroll;
+    overflow-x: auto;
     padding: 10px ;
     position: relative;
+    width: auto;
 }
 
 .carousel__container{
@@ -59,6 +60,7 @@ darle al item escala de 1.5 y opacidad de 1 */
 
 .carousel-item__img{
     height: 300px;
+    -o-object-fit: cover;
     object-fit: cover;
     width: 200px;
 }
